k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-game-tab-fe
  namespace: minigame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-game-tab-fe
  template:
    metadata:
      labels:
        app: mini-game-tab-fe
    spec:
      containers:
      - name: mini-game-tab-fe-container
        image: metafi/ok-mini-app-fe:0.1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
