k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-game-tab-fe-service
  namespace: minigame
spec:
  type: NodePort
  selector:
    app: mini-game-tab-fe
  ports:
  - protocol: TCP
    port: 80          
    targetPort: 80    
    nodePort: 30010
